Added autoplay option

--- a/treasure/templates/treasure/homepage.html
+++ b/treasure/templates/treasure/homepage.html
@@ -20,6 +20,7 @@
             <li>/players/PID/games/resume</li>
             <li>/players/PID/games/GID/join</li>
             <li>/players/PID/games/GID</li>
+            <li>/players/PID/games/GID/autoplay</li>
             <li>/players/PID/games/GID/play/CARD</li>
         </ul>
     </body>
